--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -50,7 +50,8 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#" style="color: aliceblue;">About
+                                <a class="nav-link active" aria-current="page" href="#AboutUs"
+                                    style="color: aliceblue;">About
                                     Us</a>
                             </li>
                             <li class="nav-item">
@@ -58,11 +59,15 @@
                                     style="color: aliceblue;">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#"
+                                <a class="nav-link active" aria-current="page" href="#Contact"
                                     style="color: aliceblue;">Contact</a>
                             </li>
                         </ul>
                     </div>
+                </div>
+                <div class="d-flex" style="gap: 1rem;">
+                    <a href="./web/assets/pages/log-in.html" style="color: #ec225e; cursor: pointer;">LogIn</a>
+                    <a href="./web/assets/pages/register.html" style="color: #ec225e; cursor: pointer;">Register</a>
                 </div>
                 <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
                     aria-controls="offcanvasScrolling"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
@@ -163,10 +168,10 @@
             </div>
             <div class="d-flex justify-content-center">
                 <form class="d-flex search-form-overlay" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <input v-model="valueSearch" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button
                         style="color: aliceblue; background-color: #fbb002d4; border: solid 2px #fbb002d4; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);"
-                        class="btn btn-outline-success button-search" type="submit">Search</button>
+                        class="btn btn-outline-success button-search" type="button" @click="filterSearch">Search</button>
                 </form>
             </div>
     </div>
@@ -199,7 +204,8 @@
 
                             <a href="./web/assets/pages/fragances.html"
                                 class="btn btn-primary py-md-3 px-md-5 mt-2 button-carrusel"
-                                style="color: #020305; background-color: rgb(255, 255, 255) !important; border: solid 2px;">Buy Now</a>
+                                style="color: #020305; background-color: rgb(255, 255, 255) !important; border: solid 2px;">Buy
+                                Now</a>
                         </div>
                     </div>
                 </div>
@@ -220,7 +226,7 @@
 
     </header>
     <main>
-        <div class="container-fluid py-5">
+        <div id="AboutUs" class="container-fluid py-5">
             <div class="container pt-5">
                 <div class="row">
                     <div class="col-lg-6" style="min-height: 500px;">
@@ -282,20 +288,14 @@
                 </div>
             </div>
             <div class="olf-family d-flex justify-content-around gap-5 flex-wrap">
-                <img class="img-olf" src="./web/assets/images/citrus.png" alt="citrus"
-                    style="width: 12rem; object-fit: contain;">
-                <img class="img-olf" src="./web/assets/images/oriental.png" alt="oriental"
-                    style="width: 12rem; object-fit: contain;">
-                <img class="img-olf" src="./web/assets/images/fougére.png" alt="fougére"
-                    style="width: 12rem; object-fit: contain;">
-                <img class="img-olf" src="./web/assets/images/flowery.png" alt="flowery"
-                    style="width: 12rem; object-fit: contain;">
-                <img class="img-olf" src="./web/assets/images/woody.png" alt="woody"
-                    style="width: 12rem; object-fit: contain;">
-                <img class="img-olf" src="./web/assets/images/chypre.png" alt="chypre"
-                    style="width: 12rem; object-fit: contain;">
-
+                <img @click="filterByOlfactoryFamily(CITRUS)" class="img-olf" src="./web/assets/images/citrus.png" alt="citrus" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(ORIENTAL)" class="img-olf" src="./web/assets/images/oriental.png" alt="oriental" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(FOUGERE)" class="img-olf" src="./web/assets/images/fougére.png" alt="fougére" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(FLOWERY)" class="img-olf" src="./web/assets/images/flowery.png" alt="flowery" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(WOODY)" class="img-olf" src="./web/assets/images/woody.png" alt="woody" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(CHYPRE)" class="img-olf" src="./web/assets/images/chypre.png" alt="chypre" style="width: 12rem; object-fit: contain;">
             </div>
+            
         </div>
     </main>
     <footer>
@@ -308,12 +308,15 @@
                     </a>
                     <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Follow Us</h6>
                     <div class="d-flex justify-content-start">
-                        <a class="btn btn-square mr-2 button-footer" style="color: #ec225e; border: solid 1px #ec225e;"
-                            href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square mr-2 button-footer" style="color: #ec225e; border: solid 1px #ec225e;"
-                            href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square mr-2 button-footer" style="color: #ec225e; border: solid 1px #ec225e;"
-                            href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square mr-2 button-footer"
+                            style="color: #ec225e; border: solid 1px #ec225e;" href="#"><i
+                                class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square mr-2 button-footer"
+                            style="color: #ec225e; border: solid 1px #ec225e;" href="#"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square mr-2 button-footer"
+                            style="color: #ec225e; border: solid 1px #ec225e;" href="#"><i
+                                class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-square button-footer" style="color: #ec225e; border: solid 1px #ec225e;"
                             href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -322,14 +325,18 @@
                     <div class="col-lg-3 col-md-6 mb-5">
                         <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Pages</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Products</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                            <a class="text-white-50 mb-2" href="#"><i
+                                    class="fa fa-angle-right mr-2"></i>Products</a>
+                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About
+                                Us</a>
                             <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Gif Cards</a>
+                            <a class="text-white-50 mb-2" href="#"><i
+                                    class="fa fa-angle-right mr-2"></i>Testimonial</a>
+                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Gif
+                                Cards</a>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 mb-6">
+                    <div id="Contact" class="col-lg-6 col-md-6 mb-6">
                         <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
                         <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
@@ -341,30 +348,30 @@
                         loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
-        </div>
-        <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5"
-            style="border-color: rgba(256, 256, 256, .1) !important;">
-            <div class="row">
+            <div class="row" style="margin-top: 2rem;">
                 <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                    <p class="m-0 text-white-50">Copyright &copy; <a href="#">VelvetFragances</a>. All Rights
+                    <p class="m-0">Copyright &copy; <a style="color: #ec225e;" href="#">VelvetFragances</a>. All
+                        Rights
                         Reserved.</a>
                     </p>
                 </div>
                 <div class="col-lg-6 text-center text-md-right">
-                    <p class="m-0 text-white-50">Designed by <a href="#">MindHub</a>
+                    <p class="m-0">Designed by <a style="color: #fbb002d4;" href="#">MindHub</a>
                     </p>
                 </div>
             </div>
         </div>
 
+
     </footer>
     </div>
 </body>
-<script src="./web/assets/js/index.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="./web/assets/js/index.js"></script>
 
 </html>
