--- a/src/main/resources/static/web/assets/pages/log-in.html
+++ b/src/main/resources/static/web/assets/pages/log-in.html
@@ -17,7 +17,7 @@
 <body style="background-color: #d2d2d2;">
     <div id="app">
         <header>
-            <nav class="navbar navbar-expand-lg" style="background-color: #020305;">
+            <nav class="navbar navbar-expand-lg" style="background-color:#020305;">
                 <div class="container-fluid">
                     <img src="../images/logo 2.png" alt="" style="width: 13%;">
                     <a class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -42,13 +42,16 @@
                                     Products
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./fragances.html">Fragances</a></li>
-                                    <li><a class="dropdown-item" href="./air-fresheners.html">Air fresheners</a></li>
-                                    <li><a class="dropdown-item" href="#">Creams</a></li>
+                                    <li><a class="dropdown-item" href="../pages/fragances.html">Fragances</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="../pages/air-fresheners.html">Air
+                                            fresheners</a></li>
+                                    <li><a class="dropdown-item" href="../pages/creams.html">Creams</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#" style="color: aliceblue;">About
+                                <a class="nav-link active" aria-current="page" href="#AboutUs"
+                                    style="color: aliceblue;">About
                                     Us</a>
                             </li>
                             <li class="nav-item">
@@ -62,6 +65,7 @@
                         </ul>
                     </div>
                 </div>
+                <a style="color: #ec225e; cursor: pointer;">Register</a>
                 <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
                     aria-controls="offcanvasScrolling"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                         fill="currentColor" class="bi bi-cart2 colorSvg m-3" viewBox="0 0 16 16">
@@ -80,7 +84,8 @@
                         <div class="ajax-cart-list">
                             <div class="ajax-cart-item">
                                 <div class="ajax-cart-item-image-col ajax-cart-item-col">
-                                    <img class="img-responsive" src="../images/BAGUES-Rio-ML-X-50.jpg" title="">
+                                    <img class="img-responsive" src="./web/assets/images/BAGUES-Rio-ML-X-50.jpg"
+                                        title="">
                                 </div>
                                 <div class="ajax-cart-item-desc-col ajax-cart-item-col">
                                     <div class="ajax-cart-item-info">
@@ -158,148 +163,34 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex justify-content-center">
-                <form class="d-flex search-form-overlay" role="search">
-                    <input v-model="valueSearch" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button
-                        style="color: aliceblue; background-color: #fbb002d4; border: solid 2px #fbb002d4; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);"
-                        class="btn btn-outline-success button-search" type="button" @click="filterSearch">Search</button>
-                </form>
-            </div>
-
-
-            <div class="container-fluid p-0">
-                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="../images/mujer-crema-2.png" alt="Image">
-                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 900px;">
-                                    <h1 class="display-3 mb-md-4"
-                                        style=" color: #020305; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
-                                        Nourish your skin with the care it deserves
-                                    </h1>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/piernas.png" alt="Image">
-                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="" style="max-width: 900px;">
-                                    <h1 class="display-3 mb-md-4"
-                                        style="color: #020305; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
-                                        Nourish your skin with the care it deserves
-                                    </h1>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
         </header>
 
         <main>
-            <h1
-                style="font-size: 3rem !important; text-align: center; margin-top: 1rem; color: #ec225e; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
-                Creams</h1>
-            <div class="d-flex">
-                <div class="d-flex flex-column gap-5" style="width: 20%; margin-top: 2rem; padding-left: 1rem;">
-                    <div class="d-flex flex-column">
-                        <h6 class="form-label mx-2">Price:</h6>
-                        <div class="form-check" v-for="range in ranges" :key="range">
-                            <input class="form-check-input" type="radio" :id="range.id" :value="range.value"
-                                v-model="rangeSelected">
-                            <label class="form-check-label" :for="range.id">
-                                {{ range.label }}
-                            </label>
+            <div class="d-flex align-items-center justify-content-center" style="gap: 10rem;">
+                <img src="../images/mujer-celular.png" style="width: 40%;" alt="">
+                <form>
+                    <fieldset>
+                        <legend style="text-align: center; color: #ec225e; font-weight: 500; margin-bottom: 2rem;">Log In here!</legend>
+                        <div class="mb-3">
+                            <label for="textInput" class="form-label">E-mail:</label>
+                            <input type="text" id="disabledTextInput" class="form-control"
+                                placeholder="Enter your email...">
                         </div>
-                    </div>
-                    <div class="d-flex flex-column">
-                        <h6 class="form-label mx-2">Type</h6>
-                        <div class="form-check" v-for="type in types" :key="type">
-                            <input class="form-check-input" type="radio" :id="type.id"
-                                :value="type.value" v-model="typeSelected">
-                            <label class="form-check-label" :for="type.id">
-                                {{ type.label }}
-                            </label>
+                        <div class="mb-3">
+                            <label for="textInput" class="form-label">Password:</label>
+                            <input type="text" id="disabledTextInput" class="form-control"
+                                placeholder="Enter your password...">
                         </div>
-                    </div>
-
-                    <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Search</a>
-                </div>
-                <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/Crema-corporal-hidratante.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
+                        <div class="d-flex justify-content-center">
+                            <button type="button" class="btn" style="background-color: #ec225e; color: aliceblue;">Log
+                                In</button>
                         </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/Crema-corporal-hidratante.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/Crema-corporal-hidratante.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/Crema-corporal-hidratante.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    </fieldset>
+                </form>
             </div>
         </main>
         <footer>
-            <div class="container-fluid text-white-50 py-5 px-sm-3 px-lg-5"
-                style="margin-top: 90px;background-color: #020305;">
+            <div class="container-fluid text-white-50 py-5 px-sm-3 px-lg-5" style="background-color: #020305;">
                 <div class="d-flex justify-content-around align-items-center">
                     <div class="col-lg-3 col-md-6 mb-6">
                         <a href="" class="navbar-brand">
@@ -371,6 +262,6 @@
     </script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script src="../js/creams.js"></script>
+<script src="./web/assets/js/index.js"></script>
 
 </html>
