--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -258,14 +258,7 @@
                             <h5> Welcome to <span style="color: #ec225e; font-weight: 800;">Velvet Fragances</span>,
                                 where
                                 each aroma is an adventure.</h5>
-                            <div class="row mb-4">
-                                <div class="col-6">
-                                    <img class="img-fluid" src="img/about-1.jpg" alt="">
-                                </div>
-                                <div class="col-6">
-                                    <img class="img-fluid" src="img/about-2.jpg" alt="">
-                                </div>
-                            </div>
+                            
                             <div class="d-flex justify-content-center">
                                 <a href="./web/assets/pages/fragances.html" class="btn mt-1 button-carrusel"
                                     style="background-color: #ec225e; color: #ffffff;">Buy Now</a>
@@ -372,6 +365,7 @@
     </script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="./web/assets/js/index.js"></script>
 
 </html>
