--- a/src/main/resources/static/web/assets/pages/fragances.html
+++ b/src/main/resources/static/web/assets/pages/fragances.html
@@ -180,7 +180,7 @@
                             <div class="p-3" style="max-width: 900px;">
                                 <h1 class="display-3 mb-md-4"
                                     style="color: #020305; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
-                                    Wrap yourself in the magic of fragrances
+                                    Wrap yourself in the magic of fragances
                                 </h1>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                             <div class="" style="max-width: 900px;">
                                 <h1 class="display-3 text-white mb-md-4"
                                     style="text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
-                                    Wrap yourself in the magic of fragrances
+                                    Wrap yourself in the magic of fragances
                                 </h1>
                             </div>
                         </div>
@@ -215,10 +215,10 @@
             <h1
                 style="font-size: 3rem !important; text-align: center; margin-top: 1rem; color: #ec225e; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
                 Fragances</h1>
-            <div class="d-flex justify-content-end">
-                <a class="nav-link active" aria-current="page" href="./" style="color: #ec225e; font-weight: 600;">Go to Air
-                    Fresheners</a>
-            </div>
+                <div class="d-flex justify-content-end" style="gap: 2rem; margin-right: 1rem;">
+                    <a href="./air-fresheners.html" style="color: #ec225e; cursor: pointer; font-weight: 700;">Buy Air Fresheners</a>
+                    <a href="./creams.html" style="color: #ec225e; cursor: pointer; font-weight: 700;">Buy Creams</a>
+                </div>
 
             <div class="d-flex">
                 <div class="d-flex flex-column gap-5" style="width: 20%; margin-top: 2rem; padding-left: 1rem;">
@@ -379,6 +379,7 @@
     </script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../js/fragances.js"></script>
 
 </html>
