--- a/src/main/resources/static/administrator/assets/pages/create-cream.html
+++ b/src/main/resources/static/administrator/assets/pages/create-cream.html
@@ -145,6 +145,7 @@
     </script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="../../../administrator/assets/js/create-cream.js"></script>
 
 </html>
