--- a/src/main/resources/static/administrator/assets/pages/create-fragance.html
+++ b/src/main/resources/static/administrator/assets/pages/create-fragance.html
@@ -39,6 +39,19 @@
                             <li class="nav-item dropdown">
                                 <a style="color: aliceblue;" class="nav-link dropdown-toggle" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
+                                    Products
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="../../../web/assets/pages/fragances.html">Fragances</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="../../../web/assets/pages/air-fresheners.html">Air
+                                            fresheners</a></li>
+                                    <li><a class="dropdown-item" href="../../../web/assets/pages/creams.html">Creams</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a style="color: aliceblue;" class="nav-link dropdown-toggle" href="#" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Create products
                                 </a>
                                 <ul class="dropdown-menu">
@@ -83,8 +96,8 @@
                     <div class="input-group mb-3">
                         <select v-model="olfactoryFamily" class="form-select" id="inputGroupSelect01">
                             <option selected>Select</option>
-                            <option value="FLORAL">Flowery</option>
-                            <option value="CITRUSI">Citrus</option>
+                            <option value="FLOWERY">Flowery</option>
+                            <option value="CITRUS">Citrus</option>
                             <option value="CHYPRE">Chypre</option>
                             <option value="ORIENTAL">Oriental</option>
                             <option value="FOUGÉRE">Fougére</option>
