--- a/src/main/resources/static/web/assets/pages/log-in.html
+++ b/src/main/resources/static/web/assets/pages/log-in.html
@@ -65,7 +65,7 @@
                         </ul>
                     </div>
                 </div>
-                <a style="color: #ec225e; cursor: pointer;">Register</a>
+                <a style="color: #ec225e; cursor: pointer;" href="./register.html">Register</a>
                 <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
                     aria-controls="offcanvasScrolling"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                         fill="currentColor" class="bi bi-cart2 colorSvg m-3" viewBox="0 0 16 16">
