--- a/src/main/resources/static/web/assets/pages/register.html
+++ b/src/main/resources/static/web/assets/pages/register.html
@@ -172,7 +172,7 @@
                         <legend style="text-align: center; color: #ec225e; font-weight: 500; margin-bottom: 1rem;">Register here!</legend>
                         <div class="mb-3">
                             <label for="textInput1" class="form-label">Name:</label>
-                            <input v-model="name" type="text" id="textInput1" class="form-control">
+                            <input v-model="firstName" type="text" id="textInput1" class="form-control">
                         </div>
                         <div class="mb-3">
                             <label for="textInput2" class="form-label">Last name:</label>
