--- a/src/main/resources/static/administrator/assets/pages/create-cream.html
+++ b/src/main/resources/static/administrator/assets/pages/create-cream.html
@@ -39,6 +39,19 @@
                             <li class="nav-item dropdown">
                                 <a style="color: aliceblue;" class="nav-link dropdown-toggle" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
+                                    Products
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="../../../web/assets/pages/fragances.html">Fragances</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="../../../web/assets/pages/air-fresheners.html">Air
+                                            fresheners</a></li>
+                                    <li><a class="dropdown-item" href="../../../web/assets/pages/creams.html">Creams</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a style="color: aliceblue;" class="nav-link dropdown-toggle" href="#" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Create products
                                 </a>
                                 <ul class="dropdown-menu">
