--- a/src/main/resources/static/web/assets/pages/air-fresheners.html
+++ b/src/main/resources/static/web/assets/pages/air-fresheners.html
@@ -68,6 +68,7 @@
                         <path
                             d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
                     </svg></button>
+                    <a @click="logOut" style="color: #ec225e; cursor: pointer;">Log Out</a>
             </nav>
             <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
                 id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
@@ -248,7 +249,7 @@
                                 the
                                 card's content.</p>
                             <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
+                                <a :href="'./detailsAirFresheners.html?id=' + airFreshener.id" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
                                 <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
                             </div>
                         </div>
