--- a/src/main/resources/static/web/assets/pages/detailsFragances.html
+++ b/src/main/resources/static/web/assets/pages/detailsFragances.html
@@ -42,7 +42,7 @@
                                     Products
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="./fragances.html">Fragances</a></li>
+                                    <li><a class="dropdown-item" href="#">Fragances</a></li>
                                     <li><a class="dropdown-item" href="./air-fresheners.html">Air fresheners</a></li>
                                     <li><a class="dropdown-item" href="#">Creams</a></li>
                                 </ul>
@@ -68,7 +68,7 @@
                         <path
                             d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
                     </svg></button>
-                    <a @click="logOut" style="color: #ec225e; cursor: pointer;">Log Out</a>
+                <a @click="logOut" style="color: #ec225e; cursor: pointer;">Log Out</a>
             </nav>
             <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
                 id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
@@ -159,145 +159,24 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex justify-content-center">
-                <form class="d-flex search-form-overlay" role="search">
-                    <input v-model="valueSearch" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button
-                        style="color: aliceblue; background-color: #fbb002d4; border: solid 2px #fbb002d4; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);"
-                        class="btn btn-outline-success button-search" type="button" @click="filterSearch">Search</button>
-                </form>
-            </div>
-
-
-            <div class="container-fluid p-0">
-                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="../images/mujer-crema-2.png" alt="Image">
-                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 900px;">
-                                    <h1 class="display-3 mb-md-4"
-                                        style=" color: #020305; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
-                                        Nourish your skin with the care it deserves
-                                    </h1>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="../images/piernas.png" alt="Image">
-                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="" style="max-width: 900px;">
-                                    <h1 class="display-3 mb-md-4"
-                                        style="color: #020305; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
-                                        Nourish your skin with the care it deserves
-                                    </h1>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
         </header>
 
         <main>
-            <h1
-                style="font-size: 3rem !important; text-align: center; margin-top: 1rem; color: #ec225e; text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.7);">
-                Creams</h1>
-            <div class="d-flex">
-                <div class="d-flex flex-column gap-5" style="width: 20%; margin-top: 2rem; padding-left: 1rem;">
-                    <div class="d-flex flex-column">
-                        <h6 class="form-label mx-2">Price:</h6>
-                        <div class="form-check" v-for="range in ranges" :key="range">
-                            <input class="form-check-input" type="radio" :id="range.id" :value="range.value"
-                                v-model="rangeSelected">
-                            <label class="form-check-label" :for="range.id">
-                                {{ range.label }}
-                            </label>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column">
-                        <h6 class="form-label mx-2">Type</h6>
-                        <div class="form-check" v-for="type in types" :key="type">
-                            <input class="form-check-input" type="radio" :id="type.id"
-                                :value="type.value" v-model="typeSelected">
-                            <label class="form-check-label" :for="type.id">
-                                {{ type.label }}
-                            </label>
-                        </div>
-                    </div>
 
-                    <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Search</a>
-                </div>
-                <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/Crema-corporal-hidratante.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
+            <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
+                <div class="card mb-3 d-flex" v-for="frag of fragance">
+                    <img :src="frag.image" class="card-img-top" alt="..." style="width: 15rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">{{frag.name}}</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                     </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/Crema-corporal-hidratante.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a :href="'./detailsCreams.html?id=' + cream.id" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/Crema-corporal-hidratante.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/Crema-corporal-hidratante.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                  </div>
             </div>
+
+
         </main>
+
         <footer>
             <div class="container-fluid text-white-50 py-5 px-sm-3 px-lg-5"
                 style="margin-top: 90px;background-color: #020305;">
@@ -373,6 +252,6 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="../js/creams.js"></script>
+<script src="../js//detailsFragances.js"></script>
 
 </html>
