--- a/src/main/resources/static/web/assets/pages/fragances.html
+++ b/src/main/resources/static/web/assets/pages/fragances.html
@@ -68,6 +68,7 @@
                         <path
                             d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
                     </svg></button>
+                    <a @click="logOut" style="color: #ec225e; cursor: pointer;">Log Out</a>
             </nav>
             <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
                 id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
@@ -246,58 +247,14 @@
                         style="background-color:#020305; color:#ffffff;">Search</a>
                 </div>
                 <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/BAGUES-Rio-ML-X-50.jpg" class="card-img-top" alt="...">
+                    <div class="card container-img-body m-3" v-for="fragance of fragances" style="width: 20rem;">
+                        <h5 style="color: #ec225e; font-weight: 700; display: flex; justify-content: end; margin: 1rem;"> Stock: {{fragance.stock}}</h5>
+                        <img :src="fragance.image" class="card-img-top card-image-me" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
+                            <h5 class="card-title">{{fragance.name}}</h5>
+                            <p class="card-text">{{fragance.description}}</p>
                             <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/BAGUES-Rio-ML-X-50.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/BAGUES-Rio-ML-X-50.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/BAGUES-Rio-ML-X-50.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
+                                <a :href="'./detailsFragances.html?id=' + fragance.id" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
                                 <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
                             </div>
                         </div>
