--- a/src/main/resources/static/web/assets/pages/log-in.html
+++ b/src/main/resources/static/web/assets/pages/log-in.html
@@ -173,16 +173,16 @@
                         <legend style="text-align: center; color: #ec225e; font-weight: 500; margin-bottom: 2rem;">Log In here!</legend>
                         <div class="mb-3">
                             <label for="textInput" class="form-label">E-mail:</label>
-                            <input type="text" id="disabledTextInput" class="form-control"
+                            <input v-model="email" type="text" id="disabledTextInput" class="form-control"
                                 placeholder="Enter your email...">
                         </div>
                         <div class="mb-3">
                             <label for="textInput" class="form-label">Password:</label>
-                            <input type="text" id="disabledTextInput" class="form-control"
+                            <input v-model="password" type="password" id="disabledTextInput" class="form-control"
                                 placeholder="Enter your password...">
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="button" class="btn" style="background-color: #ec225e; color: aliceblue;">Log
+                            <button @click="login" type="button" class="btn" style="background-color: #ec225e; color: aliceblue;">Log
                                 In</button>
                         </div>
                     </fieldset>
