--- a/src/main/resources/static/web/assets/pages/detailsFragances.html
+++ b/src/main/resources/static/web/assets/pages/detailsFragances.html
@@ -163,16 +163,19 @@
 
         <main>
 
-            <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
-                <div class="card mb-3 d-flex" v-for="frag of fragance">
-                    <img :src="frag.image" class="card-img-top" alt="..." style="width: 15rem;">
-                    <div class="card-body">
-                      <h5 class="card-title">{{frag.name}}</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+            <div class="d-flex justify-content-center">
+                <div style="display: flex !important; background-color: white; margin-top: 2rem; width: 80%; justify-content: center; align-items: center;">
+                    <div>
+                        <img :src="fragance.image" class="card-img-top" alt="..." style="width: 100%;">
                     </div>
-                  </div>
+                    <div class="card-body">     
+                        <h5 class="card-title">{{fragance.name}}</h5>
+                        <p class="card-text">{{fragance.description}}</p>
+                        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
             </div>
+
 
 
         </main>
@@ -252,6 +255,6 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="../js//detailsFragances.js"></script>
+<script src="../js/detailsFragances.js"></script>
 
 </html>
